2001-09-07  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-kanagaki.el (skk-toggle-katakana): Make or kill local
	variable `skk-kanagaki-state'.
	(skk-mode, skk-latin-mode, skk-jisx0208-latin-mode,
	skk-abbrev-mode): New advice.

	* skk-nicola.el (skk-nicola-self-insert-lshift): Do not do dynamic
	completion if `this-command' is `skk-nicola-self-insert-rshift'.

2001-09-06  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: No real changes. Looks more esthetic.

	* skk-kanagaki.el (skk-toggle-katakana): New advice.

	* skk-kanagaki-menu*.el: Don't consider `skk-jisx0201-mode-map'.

2001-08-29  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Update comments and doc strings.

2001-08-25  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Farewell to Emacs 18.

2001-08-09  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Clean up.

2001-08-08  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-kanagaki.el, skk-nicola.el: Typo.

2001-07-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-kanagaki.el (skk-compute-henkan-lists): I guess that is
	preferred, then had better let the function advised.
	(skk-kanagaki-rule-list): Add a rule for `skk-kakutei-key'.

2001-07-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* skk-kanagaki.el (skk-compute-henkan-lists): The function that
	has skk-kanagaki specific transaction was moved from skk.el.

2001-03-19  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el (skk-nicola-treat-triple): New function.
	(skk-nicola-insert): Call it.

2001-03-16  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-nicola.el (skk-nicola-temp-data): New variable.
	(skk-nicola-insert): Deal with triple typings.
	(skk-nicola-format-time, skk-nicola-event-to-key,
	skk-nicola-insert-single, skk-nicola-insert-double,
	skk-nicola-maybe-double-p): New functions.

2001-03-12  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* README.NICOLA.ja: Update.

	* skk-kanagaki.el (skk-kanagaki-previous-candidate-key): Change
	the default value to "\C-p".